--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name =			Battery_Shield (работа с источником автономного питания)
-version =		1.0.1
+version =		1.0.2
 author =		iarduino <shop@iarduino.ru>
-maintainer =	Панькин Павел <sajaem@narod.ru>
+maintainer =	Панькин Павел <shop@iarduino.ru>
 sentence =		Библиотека для работы с Battery Shield - источником автономного питания (ИАП).
 paragraph =		Позволяет управлять источником автономного питания по шине I2C, выключать ИАП, включать/выключать ЗУ, получать значения Ibat, Vbat, Iout, Vout, % заряда аккумулятора, текущий тип заряда аккумулятора (TK, CC, CV).
 category =		Device Control
 url =			http://iarduino.ru/file/344.html
-architectures =	avr
+architectures =	avr,esp8266,esp32
 includes =      Battery_Shield.h
