--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name =			Battery_Shield
-version =		1.0.5
+version =		1.0.6
 author =		iarduino <shop@iarduino.ru>
-maintainer =	Панькин Павел <shop@iarduino.ru>
+maintainer =	iarduino <shop@iarduino.ru>
 sentence =		Библиотека для работы с Battery Shield - источником автономного питания (ИАП).
-paragraph =		Позволяет управлять источником автономного питания по шине I2C, выключать ИАП, включать/выключать ЗУ, получать значения Ibat, Vbat, Iout, Vout, % заряда аккумулятора, текущий тип заряда аккумулятора (TK, CC, CV).
+paragraph =		Работает как с аппаратной, так и с программной шиной I2C. Позволяет управлять источником автономного питания по шине I2C, выключать ИАП, включать/выключать ЗУ, получать значения Ibat, Vbat, Iout, Vout, % заряда аккумулятора, текущий тип заряда аккумулятора (TK, CC, CV).
 category =		Device Control
 url =			http://iarduino.ru/file/344.html
 architectures =	avr,esp8266,esp32,mbed_rp2040,renesas_uno
